# flappydof

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: collision.rs  lib.rs  main.rs  pillar.rs  player_movement.rs  setup.rs  smooth_movement.rs
