[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "*", features = [ "wayland" ] }
rand = "0.9.0"
# bevy_prng = "0.9.0"
# bevy_rand = { version = "0.9.0", features = [ "wyrand" ] }
# rand = "0.9.0"
# rand_core = "0.9.3"

[profile.dev]
opt-level = 1 

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
